@@ -6,7 +6,11 @@ Changes up to 0.99
 
    beta03
 
-   * addressed single-click atom picking and popup menu bug
+   * fixes to presets and polar contact finding code
+
+   * changes to the action menu for selections
+
+   * addressed single-click select and menu with slow refresh
 
    * fixed serious race condition / threading bug in popup menus -- this
    explains & eliminate the sporadic crashes observed on smp machines
